# applied-machine-learning

./: .gitignore  .pre-commit-config.yaml  README.md  example.config.yaml  main.py  pyproject.toml
.github/workflows/: unit-tests.yml
archive/: lgbm_grid_search_results.txt
notebooks/: mp_multiclass_exploration.ipynb  mp_prelim_exploration.ipynb
overleaf/proposal/: main.tex  references.bib
src/: constants.py
src/data/: dataset.py  dataset_lightgbm.py  dataset_pytorch.py  download.py  preprocess_data.py  preprocess_image.py
src/features/: image_preprocessor.py  preprocess_data.py  preprocess_lightgbm.py  preprocess_pytorch.py
src/models/: CNN.py  base.py  cnn.py  lgbm.py  resnet.py
src/training/: cv.py  train.py  trainer.py
src/utils/: logger.py
tests/data/: test_dataset_lightgbm.py  test_dataset_pytorch.py  test_download.py
tests/features/: test_image_preprocessor.py  test_preprocess_lightgbm.py  test_preprocess_pytorch.py
