[project]
name = "applied-machine-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imutils>=0.5.4",
    "ipywidgets>=8.1.8",
    "kagglehub>=1.0.0",
    "logging>=0.4.9.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.2",
    "pre-commit>=4.5.1",
    "ruff>=0.15.10",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

[tool.ruff]
line-length = 80
